src/styles/components/footer.scss
// IMPORTS

@import "../variables.scss";
@import "../animations/appearText.scss";

// FOOTER STYLES

footer {
    min-height: 100vh;
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    transition: opacity .5s ease-in;
    &::after{
        content: "CONTACT";
        font-size: 13rem;
        text-shadow: 3px 2px 3px $secondColor;
        color: $baseColor;
        position: absolute;
        opacity: 0.5;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: -1;
    }
}

.footer__info{
    text-align: center;
}

.footer__header{
    font-size: 3rem;
    color: $baseColor;
    text-shadow: $stroke;
    margin: 30px;
}

.footer__social-list{
    list-style-type: none;
    li{
        padding: 30px;
    }
}

.footer__social-list-info{
    display: inline;
    margin-left: 15px;
    color: $baseColor;
    text-shadow: $stroke;
    opacity: 0;
    font-size: 2rem;
}

.footer__social-list-icon{
    font-size: 4rem;
    &:hover ~ p{
        animation: appearText .6s ease forwards;
    }
    color: $secondColor;
    text-shadow: $stroke;
    transition: .2s ease;
    &:visited{
        color: $secondColor;
    }
    &:hover{
        color: darken($baseColor, 20%);
    }
}

.footer__info{
    p{
        margin: 15px 0;
    }
}

@media (max-width: 1100px){
    footer {
        &::after{
            font-size: 8rem;
        }
    }
}

@media (max-width: 730px){
    footer{
        &::after{
            font-size: 4rem;
        }
    }
    .footer__social-list-info{
        opacity: 1;
    }
}

@media (max-width: 560px){
    .footer__social-list-info{
        font-size: 1.5rem;
    }
}

